--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             }
           }
         ); 
-      }, {scope: 'publish_actions'});
+      // }, {scope: 'publish_actions'});
+    });
     }
     </script>
     <button onclick="myFacebookLogin()">Login with Facebook</button>
