--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
               api_response = response;
             }
           }
-        // ); 
-      }, {scope: 'publish_actions'});
+        ); 
+      // }, {scope: 'publish_actions'});
     });
     }
     </script>
