--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             }
           }
         ); 
-      // }, {scope: 'publish_actions'});
-    });
+      }, {scope: 'user_posts'});
+    };
     }
     </script>
     <button onclick="myFacebookLogin()">Login with Facebook</button>
