trying markov code

--- a/index.html
+++ b/index.html
@@ -40,279 +40,13 @@
             if (response && !response.error) {
               console.log(response);
               api_response = response['data'];
+
+              for(var i=0; i<api_response.length; i++){
+                titles.push(api_response[i]['message']);
+              }
+
               // BEGIN MARKOV
-              var titles = [
-                "The Surrogacy Trap", 
-                "The Survivors Club", 
-                "The Suspect", 
-                "The Sweetest Thing", 
-                "The Switch", 
-                "The Temp", 
-                "The Tenth Circle", 
-                "The Terror Inside", 
-                "The Test of Love", 
-                "The Thomas Crown Affair", 
-                "The Thorn Birds (Part 1)", 
-                "The Thorn Birds (Part 2)", 
-                "The Thorn Birds (Part 3)", 
-                "The Thorn Birds (Part 4)", 
-                "The Thorn Birds (Part 5)", 
-                "The Three Lives of Karen", 
-                "The Ticket", 
-                "The Trophy Wife's Secret", 
-                "The Truth About Cats and Dogs", 
-                "The Truth About Jane", 
-                "The Truth About Love", 
-                "The Truth About Lying", 
-                "The Two Mr. Kissels", 
-                "The Ugly Truth", 
-                "The United States of Leland", 
-                "The Unquiet", 
-                "The Unsaid", 
-                "The Unspoken Truth", 
-                "The Wandering Soul Murders", 
-                "The War Between Us", 
-                "The Watch", 
-                "The Wedding Dress", 
-                "The Wedding Planner", 
-                "The Wednesday Woman", 
-                "The Whereabouts of Jenny", 
-                "The Whole Shebang", 
-                "The Wife He Met Online", 
-                "The Witness Files", 
-                "The Wives He Forgot", 
-                "The Woman Who Sinned", 
-                "The Women of Brewster Place", 
-                "The Wrong Girl", 
-                "The Wrong Woman", 
-                "The Wronged Man", 
-                "Their Eyes Were Watching God", 
-                "Their Second Chance", 
-                "Thelma & Louise", 
-                "Then She Found Me", 
-                "There Was a Little Boy", 
-                "These Old Broads", 
-                "They Come Back", 
-                "They Shoot Divas, Don't They?", 
-                "Thicker Than Blood", 
-                "Things We Lost in the Fire", 
-                "Things You Can Tell Just by Looking at Her", 
-                "Thirst", 
-                "Thirteen", 
-                "This Boy's Life", 
-                "This Child Is Mine", 
-                "Thomas Kinkade's The Christmas Cottage", 
-                "Those Secrets", 
-                "Those She Left Behind", 
-                "Three Secrets", 
-                "Thrill", 
-                "Thrill of the Kill", 
-                "Through the Eyes of a Killer", 
-                "Thy Neighbor's Wife", 
-                "Ticket Out", 
-                "Ties That Bind", 
-                "Ties That Bind 2009", 
-                "Till the End of the Night", 
-                "Time and Again: AN LMN ORIGINAL MOVIE", 
-                "Time to Say Goodbye?", 
-                "Tin Cup", 
-                "Tipping Point", 
-                "To Be Fat Like Me", 
-                "To Catch a Killer", 
-                "To Dance With Olivia", 
-                "To Face Her Past", 
-                "To Have and to Hold", 
-                "To Live Again", 
-                "To Live For", 
-                "To Love, Honor & Betray", 
-                "To Love, Honor and Deceive", 
-                "To Save the Children", 
-                "To Serve and Protect", 
-                "Together Again for the First Time", 
-                "Too Close to Home", 
-                "Too Rich: The Secret Life of Doris Duke", 
-                "Too Young to Be a Dad", 
-                "Too Young to Die?", 
-                "Too Young to Marry", 
-                "Torn Apart", 
-                "Torso: The Evelyn Dick Story", 
-                "Total Stranger", 
-                "Touch and Go", 
-                "Touched", 
-                "Touched by a Killer", 
-                "Touched by Evil", 
-                "Touching Wild Horses", 
-                "Tracks of a Killer", 
-                "Trail of Tears", 
-                "Transamerica", 
-                "Trapped", 
-                "Trapped in a Purple Haze", 
-                "Trapped: Buried Alive", 
-                "Trial at Fortitude Bay", 
-                "Trial by Fire", 
-                "Trial By Fire (aka Smoke Jumper)", 
-                "Tribute", 
-                "Tricks of the Trade", 
-                "Tripfall", 
-                "Triple Dog", 
-                "Tripping Wire", 
-                "Triumph Over Disaster: The Hurricane Andrew Story", 
-                "Trophy Wife", 
-                "Troubled Waters", 
-                "True Confessions of a Hollywood Starlet", 
-                "True Crime", 
-                "True Love", 
-                "True True Lie", 
-                "Trust", 
-                "Truth", 
-                "Tully", 
-                "Twelve Mile Road", 
-                "Twist of Faith", 
-                "Twisted Desire", 
-                "Two Against Time", 
-                "Two Came Back", 
-                "Two Can Play That Game", 
-                "Two Mothers for Zachary", 
-                "Two of Hearts", 
-                "Two Weeks", 
-                "Two Weeks Notice", 
-                "Tyler Perry's The Family That Preys", 
-                "Ultimate Deception", 
-                "Unanswered Prayers", 
-                "Uncaged Heart", 
-                "Under the Mistletoe", 
-                "Under the Tuscan Sun", 
-                "Undercover Christmas", 
-                "Unfaithful", 
-                "Unforgivable", 
-                "Unstable", 
-                "Unstable (2009)", 
-                "Unthinkable", 
-                "Untraceable", 
-                "Unwed Father", 
-                "Up Close & Personal", 
-                "Uptown Girls", 
-                "Urban Cowboy", 
-                "V. I. Warshawski", 
-                "Vacancy", 
-                "Vacancy 2", 
-                "Vanished", 
-                "Vanished Without a Trace", 
-                "Vanished Without a Trace [1999]", 
-                "Vendetta II: The New Mafia", 
-                "Venus & Mars", 
-                "Verdict in Blood", 
-                "Vernie", 
-                "Vicky Cristina Barcelona", 
-                "Victim of Innocence", 
-                "Victim of Love", 
-                "Victim of the Haunt", 
-                "Victim of the Night", 
-                "Video Voyeur: The Susan Wilson Story", 
-                "View From The Top", 
-                "View of Terror", 
-                "Violation of Trust", 
-                "Violets Are Blue", 
-                "Virtual Lies", 
-                "Visions of Murder", 
-                "Visitors of the Night", 
-                "Voice From the Grave", 
-                "Volcano: Fire on the Mountain", 
-                "Vows of Deception", 
-                "Voyage of Terror", 
-                "Waiting to Exhale", 
-                "Waitress", 
-                "Walking the Halls", 
-                "Wall of Secrets", 
-                "Wandering Eye", 
-                "Wasted", 
-                "Water's Edge", 
-                "Waterproof", 
-                "We Have Your Husband", 
-                "We the Jury", 
-                "We Were the Mulvaneys", 
-                "Weather Girl", 
-                "Web of Deceit", 
-                "Web of Deception", 
-                "Web Of Desire", 
-                "Web of Lies", 
-                "Wedding Bell Blues", 
-                "Wedding Daze", 
-                "Welcome Home, Roxy Carmichael", 
-                "What a Girl Wants", 
-                "What Alice Found", 
-                "What Color is Love?", 
-                "What Comes Around", 
-                "What Girls Learn", 
-                "What if God Were the Sun?", 
-                "What Kind of Mother Are You?", 
-                "What Lies Above", 
-                "What Makes a Family", 
-                "What Matters Most", 
-                "What She Knew", 
-                "What's Love Got To Do With It", 
-                "When A Man Loves A Woman", 
-                "When a Stranger Calls Back", 
-                "When Andrew Came Home", 
-                "When Billie Beat Bobby", 
-                "When Danger Follows You Home", 
-                "When Harry Met Sally", 
-                "When He Didn't Come Home", 
-                "When Husbands Cheat", 
-                "When Innocence Is Lost", 
-                "When Justice Fails", 
-                "When Love Kills: The Seduction of John Hearn", 
-                "When No One Would Listen", 
-                "When Secrets Kill", 
-                "When Strangers Appear", 
-                "When the Cradle Falls", 
-                "Where the Heart Is", 
-                "Where's the Money, Noreen?", 
-                "While Justice Sleeps", 
-                "While the Children Sleep", 
-                "While You Were Sleeping", 
-                "Whisper", 
-                "Whispers and Lies", 
-                "White Christmas", 
-                "White Oleander", 
-                "Who Is Clark Rockefeller?", 
-                "Who Killed Allison Parks?", 
-                "Whose Daughter is She?", 
-                "Why I Wore Lipstick to My Mastectomy", 
-                "Wicked", 
-                "Wicked Minds", 
-                "Wicker Park", 
-                "Wide Awake", 
-                "Widow on the Hill", 
-                "Widows", 
-                "Wife, Mother, Murderer: The Marie Hilley Story", 
-                "Wild Iris", 
-                "Will You Merry Me?", 
-                "Willed to Kill", 
-                "William & Kate", 
-                "Willing to Kill: The Texas Cheerleader Story", 
-                "Wind Chill", 
-                "Winter of Frozen Dreams", 
-                "Wisegal", 
-                "Wishcraft", 
-                "With Harmful Intent", 
-                "With Hostile Intent", 
-                "With Murder in Mind", 
-                "Within", 
-                "Witness", 
-                "Woman on the Ledge", 
-                "Woman on Top", 
-                "Woman Undone", 
-                "Woman With a Past", 
-                "Wonder Boys", 
-                "Wounded Heart", 
-                "Write and Wrong", 
-                "Yesterday's Children", 
-                "You Belong to Me", 
-                "You Belong to Me Forever", 
-                "You Can Count on Me", 
-                "You've Got Mail"
-            ];
+              var titles = [];
 
             var terminals = {};
             var startwords = [];
