--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               var titles = [];
 
               for(var i=0; i<api_response.length; i++){
-                titles.push(api_response[i]['message']);
+                titles[i] = api_response[i]['message'];
               }
 
             console.log(titles);
