pull more posts

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
     };
 
     </script>
-    <button onclick="myFacebookLogin()">Login with Facebook</button>
-    <a class="button generate_posts">Generate Post</a>
-
+    <div class="container">
+      <button onclick="myFacebookLogin()">Login with Facebook</button>
+      <a class="button generate_posts">Generate Post</a>
+    </div>
   </body>
 </html>
