trying to get foundation working

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <!-- <link rel="stylesheet" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.css"> -->
   </head>
   <body>
-    <link rel="stylesheet" src="./css/foundation.min.css">
+    <link rel="stylesheet" src="../css/foundation.min.css">
     <script   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script>
-    <script src="./js/vendor/foundation.min.js"></script>
+    <script src="../js/vendor/foundation.min.js"></script>
     <script>
       window.fbAsyncInit = function() {
         FB.init({
