--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <link rel="stylesheet" src="../css/foundation.min.css">
     <script   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script>
-    <script src="../js/vendor/foundation.min.js"></script>
+    <!-- <script src="../js/vendor/foundation.min.js"></script> -->
     <script>
       window.fbAsyncInit = function() {
         FB.init({
