trying to get foundation working

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <style>
       body{
         background-color:#3b5998;
+        color:white;
+      }
+      p, a{
+        font-size:16px;
       }
     </style>
     <link rel="stylesheet" src="../css/foundation.min.css">
