--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       <button onclick="myFacebookLogin()">Login with Facebook</button>
       <button class="button generate_posts">Generate Post</button>
       <h2 class="post_zone"></h2>
+      <button class="post_it">Post to Facebook</button>
     </div>
 
   </body>
