--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       button{
         background-color:#3b5998;
         color:white;
+        font-weight:bold;
+        font-family:'Helvetica','Arial',sans-serif;
       }
     </style>
     <link rel="stylesheet" src="../css/foundation.min.css">
