--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <style>
       body{
         background-color:#3b5998;
-        color:white;
+        /*color:white;*/
       }
       p, a{
         font-size:16px;
       }
       .container{
         background-color:#e9ebee;
+        font-color:black;
       }
       button{
         background-color:#3b5998;
