--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               var title = make_title(3 + Math.floor(3 * Math.random()));
               $('.post_zone').text(title);
             })
-            $('post_it').click(function(){
+            $('.post_it').click(function(){
               FB.api('/me/feed', 'post', {message: $('.post_zone').text()});
               console.log($('.post_zone').text());
             })
