--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               $('.post_zone').text(title);
             })
             $('.post_it').click(function(){
-              FB.api('/me/feed', 'post', {message: $('.post_zone').text()});
+              FB.api('/me/feed', 'post', {message: $('.post_zone').text(), source: 'MarkovMe'});
               console.log($('.post_zone').text());
             })
             // var title = make_title(3 + Math.floor(3 * Math.random()));
