--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
       .container{
         background-color:#e9ebee;
         font-color:black;
+        padding:1rem;
       }
       button{
         background-color:#3b5998;
         color:white;
         font-weight:bold;
         font-family:'Helvetica','Arial',sans-serif;
+        padding:1rem;
       }
       .reveal_on_login{
         display:none;
@@ -133,7 +135,7 @@
     };
 
     </script>
-    
+
     <button class="login" onclick="myFacebookLogin()">Login with Facebook</button>
     <div class="container">
       <div class="reveal_on_login">
