--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       }
       .container{
         background-color:#e9ebee;
-        font-color:black;
+        color:black;
         padding:1rem;
       }
       button{
