testing profile picture

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
       .reveal_on_login{
         /*display:none;*/
       }
+      .pro_pic{
+        width:20%;
+        height:auto;
+      }
+      .post_zone{
+        width:80%;
+        float:right;
+      }
     </style>
     <link rel="stylesheet" src="../css/foundation.min.css">
     <script   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script>
@@ -59,6 +67,7 @@
 
     <script>
     var api_response = {};
+    var pro_pic_address = '';
     // Only works after `FB.init` is called
     function myFacebookLogin() {
       FB.login(function(){
@@ -67,7 +76,8 @@
             "/me/picture",
             function (response) {
               if (response && !response.error) {
-                console.log(response);
+                pro_pic_address = response['data']['url'];
+                $('.pro_pic').attr('src',pro_pic_address);
               }
             }
         );
@@ -151,7 +161,10 @@
     <div class="container">
       <div class="reveal_on_login">
         <button class="button generate_posts">Generate Post</button>
-        <h2 class="post_zone"></h2>
+        <div class="content_area">
+          <img class="pro_pic" src="" /> 
+          <h2 class="post_zone"></h2>
+        </div>
         <button class="post_it">Post to Facebook</button>
       </div>
     </div>
