--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
       .reveal_on_login{
         /*display:none;*/
       }
+      .content_area{
+        padding:2rem;
+        margin:1rem;
+        background-color:white;
+        border:1px blue solid;
+      }
       .pro_pic{
-        width:20%;
+        width:40px;
         height:auto;
       }
       .post_zone{
