--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       }
       .post_zone{
         width:80%;
-        float:right;
+        /*float:right;*/
+        display:inline-block;
+        vertical-align: top;
       }
     </style>
     <link rel="stylesheet" src="../css/foundation.min.css">
