--- a/index.html
+++ b/index.html
@@ -171,11 +171,21 @@
         <button class="button generate_posts">Generate Post</button>
         <div class="content_area">
           <img class="pro_pic" src="" /> 
-          <h2 class="post_zone"></h2>
+          <p class="post_zone"></p>
         </div>
         <button class="post_it">Post to Facebook</button>
       </div>
     </div>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-66264514-2', 'auto');
+    ga('send', 'pageview');
+
+  </script>
   </body>
 </html>
