--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         padding:2rem;
         margin:1rem;
         background-color:white;
-        border:1px blue solid;
+        border-top:1px lightgray solid;
+        border-bottom:1px lightgray solid;
       }
       .pro_pic{
-        width:40px;
+        width:4rem;
         height:auto;
       }
       .post_zone{
@@ -43,6 +44,10 @@
         /*float:right;*/
         display:inline-block;
         vertical-align: top;
+      }
+      .new_post{
+        display:none;
+        background-color:white;
       }
     </style>
     <link rel="stylesheet" src="../css/foundation.min.css">
@@ -177,6 +182,9 @@
       </div>
     </div>
 
+    <div class="new_post">
+      <img class="pro_pic"><p class="post_zone" style="vertical-align: top;display:inline-block;"></p>
+    </div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
