--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
             })
             $('.post_it').click(function(){
               FB.api('/me/feed', 'post', {message: $('.post_zone').text(), source: 'MarkovMe'});
-              console.log($('.post_zone').first().text());
+              console.log($('.post_zone').text());
+              $('.new_post_zone').text($('.post_zone').text());
               $('.new_post').show();
             })
             // var title = make_title(3 + Math.floor(3 * Math.random()));
@@ -184,7 +185,7 @@
     </div>
 
     <div class="new_post">
-      <img class="pro_pic"><p class="post_zone" style="vertical-align: top;display:inline-block;"></p>
+      <img class="pro_pic"><p class="new_post_zone" style="vertical-align: top;display:inline-block;"></p>
     </div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
