add GA tracking code

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       .new_post{
         display:none;
         background-color:white;
+        margin: 2rem;
+        padding: 2rem;
+      }
+      .new_post_zone{
+        padding-left:1rem;
       }
     </style>
     <link rel="stylesheet" src="../css/foundation.min.css">
