--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
 
     <div class="new_post">
       <img class="pro_pic"><p class="new_post_zone" style="vertical-align: top;display:inline-block;"></p>
+      <br>
+      <a style="color:lightblue">Like</a><a style="color:lightblue">Share</a>
     </div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
