--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         background-color:white;
         margin: 2rem;
         padding: 2rem;
+        position: relative;
       }
       .new_post_zone{
         padding-left:1rem;
+        position: absolute
       }
     </style>
     <link rel="stylesheet" src="../css/foundation.min.css">
@@ -191,8 +193,7 @@
 
     <div class="new_post">
       <img class="pro_pic"><p class="new_post_zone" style="vertical-align: top;display:inline-block;"></p>
-      <br>
-      <a style="color:lightblue">Like</a><a style="color:lightblue">Share</a>
+      <a style="color:blue;bottom:0.5rem;left:8rem">Like</a><a style="color:blue;bottom:0.5rem;left:10rem">Share</a>
     </div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
