--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <div class="new_post">
       <img class="pro_pic"><p class="new_post_zone" style="vertical-align: top;display:inline-block;"></p>
-      <a style="color:blue;bottom:0.5rem;left:8rem">Like</a><a style="color:blue;bottom:0.5rem;left:10rem">Share</a>
+      <a style="color:blue;bottom:0.5rem;left:8rem;position:absolute">Like</a><a style="color:blue;bottom:0.5rem;left:12rem;position:absolute">Share</a>
     </div>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
