--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@
       </div>
     </div>
 
+    <h2 style="color:white;padding-left:0.5rem"> You just posted </h2>
+
     <div class="new_post">
       <img class="pro_pic"><p class="new_post_zone" style="vertical-align: top;display:inline-block;"></p>
       <a style="color:blue;bottom:0.5rem;left:8rem;position:absolute">Like</a><a style="color:blue;bottom:0.5rem;left:12rem;position:absolute">Share</a>
