--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
                 }
               }
 
-            // console.log(titles);
+              
+
+            console.log(titles);
 
             var terminals = {};
             var startwords = [];
