--- a/debug.html
+++ b/debug.html
@@ -26,7 +26,7 @@
               }
             }
             );
-        });
+        },  {scope: 'user_posts,publish_actions'});
       }
     </script>
 
